--- a/src/entities/Article/ui/ArticleTextBlockComponent/ArticleTextBlockComponent.module.scss
+++ b/src/entities/Article/ui/ArticleTextBlockComponent/ArticleTextBlockComponent.module.scss
@@ -1,3 +1,3 @@
 .title {
-    margin-bottom: 16px;
+    margin: 16px 0;
 }
