--- a/src/shared/ui/RichTextEditor/ui/RichTextOutput/RichTextOutput.module.scss
+++ b/src/shared/ui/RichTextEditor/ui/RichTextOutput/RichTextOutput.module.scss
@@ -1,6 +1,4 @@
 .RichTextOutput {
-    white-space: pre-line;
-
     a {
         color: var(--accent-redesigned);
 
